--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,308 @@
-/* место для вашего кода */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center ;
+  height: 105px;
+  margin: 92px 24px;
+}
+
+.header__links-list {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  list-style: circle;
+  text-underline-offset: 5px;
+  padding-left: 26px;
+}
+
+.header__link {
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link_active .header__link {
+  text-decoration: none;
+}
+
+.header__logo {
+  display: block;
+  width: 148px;
+  height: 105px;
+  position: absolute;
+  margin-right: 450px ;
+  margin-left: 454px;
+}
+
+
+.address {
+  font-size: 18px;
+  font-style: normal;
+  line-height: 24px;
+  text-underline-offset: 5px;
+  padding-right: 25px;
+}
+.header__address { 
+  list-style: none;
+}
+
+.cover {
+width: 1100px;
+height: 757px;
+background-image: url(../images/cover.jpg);
+position: relative;
+background-repeat: no-repeat;
+background-position: center;
+background-size: 130% ;
+}
+
+.overlay {
+  position:absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.cover__title {
+  width: 1000px;
+  height: 355px;
+  margin-top: 96px;
+  font-size: 100px;
+  color: #fff;
+  font-weight: bold;
+  position: relative;
+  padding-top: 165px;
+  padding-left: 50px;
+  text-transform: uppercase;
+}
+
+.aligned-text {
+    line-height: 115px;
+    letter-spacing: 30%;
+    text-align: left;
+}
+.letter-spacing-extended {
+    line-height: 115px;
+    letter-spacing: 60%;
+  }
+  
+  .aligned-text_center {
+    text-align: center;
+    line-height: 100px;
+  }
+  
+  .aligned-text_right {
+    text-align: right;
+  }
+  .no-letter-spacing {
+    letter-spacing: none;
+  }
+  
+  .cover__description {
+    display: flex;
+    position: absolute;
+    bottom: 60px;
+    left: 78px;
+    color: #fff;
+  }
+  .cover__description-text {
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 28px;
+    word-spacing: 20px;
+    text-transform: uppercase;
+  }
+  
+  .bet-button {
+    margin-left: 79px;
+    width: 256px;
+    height: 51px;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 25px;
+    text-align: center;
+    background: transparent;
+    text-transform: uppercase;
+    color: #fff;
+    border-color: #fff;
+  }
+  
+
+  .lots {
+    margin: 179px 24px 0;
+    }
+  
+  .lots__heading {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 46.96px;
+  margin-left: 40px;
+  }
+  
+  .lots__card-list {
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 563px;
+
+  
+  }
+
+  .card_type_film {
+    background-image: url(../images/card-lot-01.jpg);
+    background-position: center;
+    background-size: cover;
+  }
+
+  .card_type_book {
+    background-image: url(../images/card-lot-02.jpg);
+    background-position: center;
+    background-size: cover;
+  }
+
+  .card_type_picture {
+    background-image: url(../images/card-lot-03.jpg);
+    background-position: center;
+    background-size: cover;
+  }
+
+
+  .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: left;
+    color: #fff;
+    width: 334px;
+  }
+
+  .card__title {
+    margin: 51px 40px 0;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 26.4px;
+    text-transform: uppercase;
+    text-decoration: underline;
+  }
+
+  .card__text {
+    margin: 48px 40px 0;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+
+  .lots_look-more-link {
+    display: flex;
+    margin-top: 30px;
+    margin-left: 40px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 23.48px;
+    text-decoration: underline;
+    text-underline-offset: 5px;
+  }
+
+  .about {
+    display: flex;
+    margin: 146px 24px 0;
+    }
+
+    .about__column {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      list-style: none;
+    }
+
+
+  .about__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 240px;
+    width: 240px;
+    background-color: black;
+    border-radius: 50%;
+    margin-top: 35px;
+    margin-left: 47px;
+  }
+
+  .about__logo-image {
+    display: block;
+    width: 148px;
+    height: 114px;
+  }
+
+  .about__card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 693px;
+    margin-top: 133px;
+    padding: 3px 0px 0px 0px;
+
+  }
+  .about__title {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 46.96px;
+    text-align: left;
+  }
+
+  .about__text{
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.01em;
+  margin-top: 150px;
+  margin-bottom: 24px;
+  }
+  
+  .no__margin__bottom{
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+  
+  .footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 180px 50px 88px ;
+  }
+
+  .footer__address {
+    padding-right: 0;
+    list-style: none;
+  }
+
+  .footer__links-list{
+    list-style: none;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21.13px;
+    text-align: center;
+  }
+
+  .footer__link_active .footer__link {
+    text-decoration: none;
+  }
+
+  .footer__social-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    list-style: none;
+    width: 240px;
+  }
+
+  .footer__social-icon {
+    width: 48px;
+    height: 48px;
+  }
+  
+  
