--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,8 @@
   align-items: center ;
   height: 105px;
   margin: 92px 24px;
+  padding-left: 26px;
+  padding-right: 25px;
 }
 
 .header__links-list {
@@ -13,7 +15,6 @@
   gap: 30px;
   list-style: circle;
   text-underline-offset: 5px;
-  padding-left: 26px;
 }
 
 .header__link {
@@ -25,13 +26,12 @@
   list-style: none;
 }
 
-.header__link_active .header__link {
+.header__link_active {
   text-decoration: none;
 }
 
 .header__logo {
-  display: block;
-  width: 148px;
+  display: flex;
   height: 105px;
   position: absolute;
   margin-right: 450px ;
@@ -44,7 +44,6 @@
   font-style: normal;
   line-height: 24px;
   text-underline-offset: 5px;
-  padding-right: 25px;
 }
 .header__address { 
   list-style: none;
@@ -68,26 +67,23 @@ background-size: 130% ;
 }
 
 .cover__title {
-  width: 1000px;
-  height: 355px;
   margin-top: 96px;
   font-size: 100px;
   color: #fff;
   font-weight: bold;
   position: relative;
-  padding-top: 165px;
-  padding-left: 50px;
+  padding: 165px 50px 0;
   text-transform: uppercase;
 }
 
 .aligned-text {
     line-height: 115px;
-    letter-spacing: 30%;
-    text-align: left;
+    letter-spacing: 0.3em;
 }
+
 .letter-spacing-extended {
     line-height: 115px;
-    letter-spacing: 60%;
+    letter-spacing: 0.6em;
   }
   
   .aligned-text_center {
@@ -99,11 +95,12 @@ background-size: 130% ;
     text-align: right;
   }
   .no-letter-spacing {
-    letter-spacing: none;
+    letter-spacing: 0;
   }
   
   .cover__description {
     display: flex;
+    align-items: center;
     position: absolute;
     bottom: 60px;
     left: 78px;
@@ -129,11 +126,13 @@ background-size: 130% ;
     text-transform: uppercase;
     color: #fff;
     border-color: #fff;
+    cursor: pointer;
   }
   
 
   .lots {
-    margin: 179px 24px 0;
+    margin-top: 179px;
+    padding: 0 24px 0;
     }
   
   .lots__heading {
@@ -141,16 +140,23 @@ background-size: 130% ;
   font-weight: 700;
   line-height: 46.96px;
   margin-left: 40px;
+  margin-bottom: 24px;
   }
   
   .lots__card-list {
-  padding: 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  height: 563px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 25px;
+  }
 
-  
+  .card-link{
+    display: flex;
+    text-decoration: none;
+  }
+
+  .lots__card-list-item{
+    display: flex;
+    position: relative;
   }
 
   .card_type_film {
@@ -176,13 +182,13 @@ background-size: 130% ;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    text-align: left;
+    justify-items: stretch;
+    position:relative ;
     color: #fff;
-    width: 334px;
+    padding: 48px 40px 48px;
   }
 
   .card__title {
-    margin: 51px 40px 0;
     font-size: 22px;
     font-weight: 700;
     line-height: 26.4px;
@@ -191,7 +197,6 @@ background-size: 130% ;
   }
 
   .card__text {
-    margin: 48px 40px 0;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
@@ -252,6 +257,7 @@ background-size: 130% ;
     font-weight: 700;
     line-height: 46.96px;
     text-align: left;
+    text-transform: uppercase;
   }
 
   .about__text{
@@ -281,14 +287,14 @@ background-size: 130% ;
   }
 
   .footer__links-list{
-    list-style: none;
     font-size: 18px;
     font-weight: 400;
     line-height: 21.13px;
     text-align: center;
+    list-style: none;
   }
 
-  .footer__link_active .footer__link {
+  .footer__link_active {
     text-decoration: none;
   }
 
@@ -297,7 +303,7 @@ background-size: 130% ;
     flex-direction: row;
     justify-content: space-between;
     list-style: none;
-    width: 240px;
+    gap: 48px;;
   }
 
   .footer__social-icon {
