--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,8 @@
-
 .header {
   display: flex;
   justify-content: space-between;
-  align-items: center ;
-  height: 105px;
-  margin: 92px 24px;
+  align-items: center;
+  margin: 92px 24px 0;
   padding-left: 26px;
   padding-right: 25px;
 }
@@ -12,7 +10,7 @@
 .header__links-list {
   display: flex;
   flex-direction: row;
-  gap: 30px;
+  gap: 33px;
   list-style: circle;
   text-underline-offset: 5px;
 }
@@ -20,6 +18,7 @@
 .header__link {
   font-size: 18px;
   line-height: 21px;
+  letter-spacing: 0.01em;
 }
 
 .header__links-list-item_no-bullit {
@@ -33,282 +32,278 @@
 .header__logo {
   display: flex;
   height: 105px;
-  position: absolute;
-  margin-right: 450px ;
-  margin-left: 454px;
+  padding-right: 150px;
 }
 
-
 .address {
+  min-width: 240px;
   font-size: 18px;
   font-style: normal;
   line-height: 24px;
   text-underline-offset: 5px;
 }
-.header__address { 
+.header__address {
   list-style: none;
 }
 
 .cover {
-width: 1100px;
-height: 757px;
-background-image: url(../images/cover.jpg);
-position: relative;
-background-repeat: no-repeat;
-background-position: center;
-background-size: 130% ;
+  margin-top: 96px;
+  background-image: url(../images/cover.jpg);
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 130%;
 }
 
 .overlay {
-  position:absolute;
+  position: absolute;
+  inset: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1;
 }
 
 .cover__title {
-  margin-top: 96px;
   font-size: 100px;
   color: #fff;
   font-weight: bold;
   position: relative;
   padding: 165px 50px 0;
   text-transform: uppercase;
+  z-index: 2;
 }
 
 .aligned-text {
-    line-height: 115px;
-    letter-spacing: 0.3em;
+  display: block;
+  line-height: 115px;
+  letter-spacing: 0.3em;
 }
 
 .letter-spacing-extended {
-    line-height: 115px;
-    letter-spacing: 0.6em;
-  }
-  
-  .aligned-text_center {
-    text-align: center;
-    line-height: 100px;
-  }
-  
-  .aligned-text_right {
-    text-align: right;
-  }
-  .no-letter-spacing {
-    letter-spacing: 0;
-  }
-  
-  .cover__description {
-    display: flex;
-    align-items: center;
-    position: absolute;
-    bottom: 60px;
-    left: 78px;
-    color: #fff;
-  }
-  .cover__description-text {
-    font-weight: 400;
-    font-size: 22px;
-    line-height: 28px;
-    word-spacing: 20px;
-    text-transform: uppercase;
-  }
-  
-  .bet-button {
-    margin-left: 79px;
-    width: 256px;
-    height: 51px;
-    font-size: 22px;
-    font-weight: 500;
-    line-height: 25px;
-    text-align: center;
-    background: transparent;
-    text-transform: uppercase;
-    color: #fff;
-    border-color: #fff;
-    cursor: pointer;
-  }
-  
+  line-height: 100px;
+  letter-spacing: 0.6em;
+}
 
-  .lots {
-    margin-top: 179px;
-    padding: 0 24px 0;
-    }
-  
-  .lots__heading {
+.aligned-text_center {
+  text-align: center;
+  line-height: 100px;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+.no-letter-spacing {
+  letter-spacing: 0;
+  line-height: 100px;
+}
+
+.cover__description {
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+  padding: 147px 50px 62px 78px;
+  z-index: 3;
+}
+.cover__description-text {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 28px;
+  word-spacing: 20px;
+  text-transform: uppercase;
+}
+
+.bet-button {
+  width: 256px;
+  height: 51px;
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 25px;
+  text-align: center;
+  background: transparent;
+  text-transform: uppercase;
+  color: #fff;
+  border-color: #fff;
+  cursor: pointer;
+  font-family: inherit;
+}
+
+.lots {
+  margin-top: 179px;
+  padding: 0 24px 0;
+}
+
+.lots__heading {
   font-size: 40px;
   font-weight: 700;
   line-height: 46.96px;
   margin-left: 40px;
   margin-bottom: 24px;
-  }
-  
-  .lots__card-list {
+  text-transform: uppercase;
+}
+
+.lots__card-list {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   gap: 25px;
-  }
+}
 
-  .card-link{
-    display: flex;
-    text-decoration: none;
-  }
+.card-link {
+  display: flex;
+  text-decoration: none;
+}
 
-  .lots__card-list-item{
-    display: flex;
-    position: relative;
-  }
+.lots__card-list-item {
+  display: flex;
+}
 
-  .card_type_film {
-    background-image: url(../images/card-lot-01.jpg);
-    background-position: center;
-    background-size: cover;
-  }
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
 
-  .card_type_book {
-    background-image: url(../images/card-lot-02.jpg);
-    background-position: center;
-    background-size: cover;
-  }
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
 
-  .card_type_picture {
-    background-image: url(../images/card-lot-03.jpg);
-    background-position: center;
-    background-size: cover;
-  }
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
 
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  padding: 51px 40px 48px;
+  background-position: center;
+  background-size: cover;
+  min-height: 563px;
+  color: #fff;
+}
 
-  .card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    justify-items: stretch;
-    position:relative ;
-    color: #fff;
-    padding: 48px 40px 48px;
-  }
+.card__title {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 26.4px;
+  text-transform: uppercase;
+  text-decoration: underline;
+}
 
-  .card__title {
-    font-size: 22px;
-    font-weight: 700;
-    line-height: 26.4px;
-    text-transform: uppercase;
-    text-decoration: underline;
-  }
+.card__text {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+}
 
-  .card__text {
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 24px;
-  }
+.card__title,
+.card__text {
+  position: relative;
+  z-index: 2;
+}
 
-  .lots_look-more-link {
-    display: flex;
-    margin-top: 30px;
-    margin-left: 40px;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 23.48px;
-    text-decoration: underline;
-    text-underline-offset: 5px;
-  }
+.lots_look-more-link {
+  display: inline-block;
+  margin-top: 30px;
+  margin-left: 40px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
 
-  .about {
-    display: flex;
-    margin: 146px 24px 0;
-    }
+.about {
+  display: flex;
+  margin: 146px 24px 0;
+}
 
-    .about__column {
-      display: grid;
-      grid-template-columns: 1fr 2fr;
-      list-style: none;
-    }
+.about__column {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  list-style: none;
+  gap: 25px;
+}
 
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 240px;
+  width: 240px;
+  background-color: black;
+  border-radius: 50%;
+  margin-top: 35px;
+  margin-left: 47px;
+}
 
-  .about__logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 240px;
-    width: 240px;
-    background-color: black;
-    border-radius: 50%;
-    margin-top: 35px;
-    margin-left: 47px;
-  }
+.about__logo-image {
+  display: block;
+  width: 148px;
+  height: 114px;
+}
 
-  .about__logo-image {
-    display: block;
-    width: 148px;
-    height: 114px;
-  }
+.about__card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  grid-column: span 2;
+  margin-top: 133px;
+  padding: 3px 0px 0px 0px;
+}
 
-  .about__card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 693px;
-    margin-top: 133px;
-    padding: 3px 0px 0px 0px;
+.about__title {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 46.96px;
+  text-transform: uppercase;
+}
 
-  }
-  .about__title {
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 46.96px;
-    text-align: left;
-    text-transform: uppercase;
-  }
-
-  .about__text{
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-top: 100px;
   font-size: 20px;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.01em;
-  margin-top: 150px;
-  margin-bottom: 24px;
-  }
-  
-  .no__margin__bottom{
-    margin-bottom: 0;
-    margin-top: 0;
-  }
-  
-  .footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 180px 50px 88px ;
-  }
+}
 
-  .footer__address {
-    padding-right: 0;
-    list-style: none;
-  }
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 180px 50px 88px;
+}
 
-  .footer__links-list{
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 21.13px;
-    text-align: center;
-    list-style: none;
-  }
+.footer__address {
+  padding-right: 0;
+  list-style: none;
+}
 
-  .footer__link_active {
-    text-decoration: none;
-  }
+.footer__links-list {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.13px;
+  text-align: center;
+  list-style: none;
+}
 
-  .footer__social-list {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    list-style: none;
-    gap: 48px;;
-  }
+.footer__link_active {
+  text-decoration: none;
+}
 
-  .footer__social-icon {
-    width: 48px;
-    height: 48px;
-  }
-  
-  
+.footer__social-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  list-style: none;
+  gap: 48px;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
