--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 .header {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+
   align-items: center;
   margin: 92px 24px 0;
   padding-left: 26px;
@@ -32,18 +33,24 @@
 .header__logo {
   display: flex;
   height: 105px;
-  padding-right: 150px;
+  width: 148px;
 }
 
 .address {
+  display: flex;
   min-width: 240px;
   font-size: 18px;
   font-style: normal;
   line-height: 24px;
   text-underline-offset: 5px;
 }
-.header__address {
+
+.address-list {
   list-style: none;
+}
+
+.header__address {
+  justify-content: flex-end;
 }
 
 .cover {
@@ -276,11 +283,6 @@
   flex-direction: row;
   justify-content: space-between;
   margin: 180px 50px 88px;
-}
-
-.footer__address {
-  padding-right: 0;
-  list-style: none;
 }
 
 .footer__links-list {
