--- a/styles/style.css
+++ b/styles/style.css
@@ -77,14 +77,14 @@
   color: #fff;
   font-weight: bold;
   position: relative;
-  padding: 150px 50px 0;
+  padding: 148px 50px 0;
   text-transform: uppercase;
   z-index: 2;
 }
 
 .aligned-text {
   display: block;
-  line-height: 150px;
+  line-height: 152px;
   letter-spacing: 0.3em;
 }
 
@@ -149,7 +149,7 @@
   font-weight: 700;
   line-height: 46.96px;
   margin-left: 40px;
-  margin-bottom: 24px;
+  margin-bottom: 25px;
   text-transform: uppercase;
 }
 
@@ -225,7 +225,7 @@
 
 .about {
   display: flex;
-  margin: 146px 24px 0;
+  margin: 148px 24px 0;
 }
 
 .about__column {
@@ -281,8 +281,8 @@
 }
 
 .footer {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   justify-content: space-between;
   margin: 180px 50px 88px;
 }
@@ -293,6 +293,7 @@
   line-height: 21.13px;
   text-align: center;
   list-style: none;
+  text-underline-offset: 5px;
 }
 
 .footer__link_active {
@@ -302,7 +303,7 @@
 .footer__social-list {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-end;
   list-style: none;
   gap: 48px;
 }
